Add a vector init example

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -6,7 +6,7 @@
   note = {Accessed: Oct 21, 2024}
 }
 
-@misc{sycl2020,
+@misc{sycl_2020,
   author = {{The Khronos SYCL Working Group}},
   title = {SYCL Specification Version 2020},
   url = {https://registry.khronos.org/SYCL/specs/sycl-2020/html/sycl-2020.html},
