Update vector-init docs

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -37,3 +37,18 @@
   year = {2024},
   note = {Accessed: Oct 21, 2024}
 }
+
+@misc{enccs_sycl_workshop,
+  title = {SYCL Workshop: Buffers and Accessors},
+  author = {ENCCS},
+  year = {2021},
+  url = {https://enccs.github.io/sycl-workshop/buffers-accessors/},
+  note = {Accessed: Oct 22, 2024}
+}
+
+@misc{codeplay,
+  author = "Codeplay Software",
+  title = "Memory Model - ComputeCpp CE 2.11.0",
+  url = {https://developer.codeplay.com/products/computecpp/ce/2.11.0/guides/sycl-for-cuda-developers/memory-model},
+  note = {Accessed: Oct 22, 2024}
+}
