Move the docs to sphinx

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1,4 +1,4 @@
-@misc{intel_device_discovery_with_sycl,
+@misc{intel_dd_with_sycl,
   author = {{Intel Corporation}},
   title = {Device Discovery with SYCL},
   url = {https://www.intel.com/content/www/us/en/developer/articles/technical/device-discovery-with-sycl.html},
