--- a/docs/references.bib
+++ b/docs/references.bib
@@ -38,14 +38,6 @@
   note = {Accessed: Oct 21, 2024}
 }
 
-@misc{enccs_sycl_workshop,
-  title = {SYCL Workshop: Buffers and Accessors},
-  author = {ENCCS},
-  year = {2021},
-  url = {https://enccs.github.io/sycl-workshop/buffers-accessors/},
-  note = {Accessed: Oct 22, 2024}
-}
-
 @misc{codeplay,
   author = "Codeplay Software",
   title = "Memory Model - ComputeCpp CE 2.11.0",
@@ -59,4 +51,28 @@
   year = {2021},
   url = {https://www.intel.com/content/www/us/en/docs/oneapi/optimization-guide-gpu/2024-0/reduction.html},
   note = {Accessed: Oct 23, 2024}
+}
+
+@misc{enccs_sycl_workshop_buffers,
+  title = {SYCL Workshop: Buffers and Accessors},
+  author = {ENCCS},
+  year = {2021},
+  url = {https://enccs.github.io/sycl-workshop/buffers-accessors/},
+  note = {Accessed: Oct 22, 2024}
+}
+
+@misc{enccs_sycl_workshop,
+  author = {Roberto Di Remigio},
+  title = {{SYCL Workshop: What is SYCL?}},
+  year = {2021},
+  url = {https://enccs.github.io/sycl-workshop/what-is-sycl/},
+  note = {Accessed: Nov 4, 2024}
+}
+
+@misc{sycltrain_github,
+  author = {Thomas Applencourt},
+  title = {\texttt{sycltrain}: A SYCL Training Repository},
+  url = {https://github.com/TApplencourt/sycltrain},
+  year = {2021},
+  note = {GitHub repository}
 }
